<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverRegLogActivity">

    <TextView
        android:id="@+id/statusCustomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="184dp"
        android:text="@string/statusCustom"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/editTextMailCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="272dp"
        android:hint="mail"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/textPasswordCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editTextMailCustom"
        android:hint="Пароль"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInCustomButton"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textPasswordCustom"
        android:text="@string/singInTextDriver" />

    <Button
        android:id="@+id/signUpdateCustomButton"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/signInCustomButton"
        android:text="@string/signUpdTextDriver" />

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/signInCustomButton"
        android:text="@string/noAccountCustom"
        android:textSize="15dp" />

</RelativeLayout>